tests/baselines/reference/enumAssignmentCompat2.errors.txt
enumAssignmentCompat2.ts(25,5): error TS2322: Type 'typeof W' is not assignable to type 'number'.
enumAssignmentCompat2.ts(27,5): error TS2322: Type 'W' is not assignable to type 'typeof W'.
enumAssignmentCompat2.ts(29,5): error TS2322: Type 'number' is not assignable to type 'typeof W'.
enumAssignmentCompat2.ts(30,5): error TS2322: Type '4' is not assignable to type 'W.a'.
enumAssignmentCompat2.ts(31,5): error TS2322: Type 'W' is not assignable to type 'WStatic'.
enumAssignmentCompat2.ts(32,5): error TS2322: Type 'number' is not assignable to type 'WStatic'.
enumAssignmentCompat2.ts(33,5): error TS2322: Type '3' is not assignable to type 'W'.


==== enumAssignmentCompat2.ts (7 errors) ====
    enum W {
    
        a, b, c,
    
    }
    
    module W {
        export class D { }
    }
    
    interface WStatic {
    
        a: W;
    
        b: W;
    
        c: W;
    
    }
    
    
    
    var x: WStatic = W;
    var y: typeof W = W;
    var z: number = W; // error
        ~
!!! error TS2322: Type 'typeof W' is not assignable to type 'number'.
    var a: number = W.a;
    var b: typeof W = W.a; // error
        ~
!!! error TS2322: Type 'W' is not assignable to type 'typeof W'.
    var c: typeof W.a = W.a;
    var d: typeof W = 3; // error
        ~
!!! error TS2322: Type 'number' is not assignable to type 'typeof W'.
    var e: typeof W.a = 4;
        ~
!!! error TS2322: Type '4' is not assignable to type 'W.a'.
    var f: WStatic = W.a; // error
        ~
!!! error TS2322: Type 'W' is not assignable to type 'WStatic'.
    var g: WStatic = 5; // error
        ~
!!! error TS2322: Type 'number' is not assignable to type 'WStatic'.
    var h: W = 3;
        ~
!!! error TS2322: Type '3' is not assignable to type 'W'.
    var i: W = W.a;
    i = W.a;
    W.D;
    var p: W.D;